--- a/widget/index.html
+++ b/widget/index.html
@@ -1148,24 +1148,23 @@
             }
 
             var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-            var gainNodes = new Map();
 
-            function getGainNode(audioElement) {
-                if (!gainNodes.has(audioElement)) {
-                    const gainNode = audioCtx.createGain();
-                    gainNode.gain.setValueAtTime(0, audioCtx.currentTime);
-                    gainNodes.set(audioElement, gainNode);
-
+            function fadeAudio(audioElement, type, duration = 2000, maxVolume = 1.0) {
+                if (!audioElement.gainNode) {
                     const track = audioCtx.createMediaElementSource(audioElement);
+                    const gainNode = audioCtx.createGain();
                     track.connect(gainNode).connect(audioCtx.destination);
+                    audioElement.gainNode = gainNode;
                 }
-                return gainNodes.get(audioElement);
-            }
 
-            function fadeAudio(audioElement, type, duration = 2000, maxVolume = 0.8) {
-                const gainNode = getGainNode(audioElement);
+                const gainNode = audioElement.gainNode;
+                
+                if (audioCtx.state === 'suspended') {
+                    audioCtx.resume(); // Resume the context if needed
+                }
+
                 const currentTime = audioCtx.currentTime;
-                gainNode.gain.cancelScheduledValues(currentTime);
+                gainNode.gain.cancelScheduledValues(currentTime); // Cancel previous fades
                 gainNode.gain.setValueAtTime(type === 'in' ? 0 : maxVolume, currentTime);
                 gainNode.gain.linearRampToValueAtTime(type === 'in' ? maxVolume : 0, currentTime + duration / 1000);
             }
