--- a/widget/index.html
+++ b/widget/index.html
@@ -842,6 +842,19 @@
                 } else {
                     userCharacterInstructions = userLawyerInstructions;
                     messageToAI = "Your client's Twitch username is \"" + twitchUserName + "\" and the message they just gave you is in the following french brackets: {" + preppedUserMessage + "}";
+                    hasBackgroundMusic = true;
+                    backgroundMusicAudio = new Audio("../assets/audio/laywer_courtroom-background-audio.mp3");
+                    backgroundMusicVolume = 0.45;
+                    backgroundMusicFadeOutTime = 500;
+                    var backgroundMusicPlayPromise = backgroundMusicAudio.play();
+                    if (backgroundMusicPlayPromise !== undefined) {
+                        backgroundMusicPlayPromise.then(_ => {
+                            fadeAudio(backgroundMusicAudio, 'in', 500, backgroundMusicVolume);
+                        }).catch(error => {
+                            hasBackgroundMusic = false;
+                            console.error(error);
+                        });
+                    }
                 }
 
                 const data = {
@@ -1027,7 +1040,13 @@
                             } else {
                                 const url = URL.createObjectURL(blob);
                                 if (isBot) { playTTSAudio(url, true, 'butler', 'normal'); }
-                                else { playTTSAudio(url, false, null, null); }
+                                else {
+                                    if (voiceID === "zGw1MayuXJEVWol6mFfg") {
+                                        playReverbTTSAudio(url, false, null, null);
+                                    } else {
+                                        playTTSAudio(url, false, null, null);
+                                    }
+                                }
                             }
                         }).catch(err => console.error(err));
                 }
@@ -1207,6 +1226,87 @@
 
                 gainNode.gain.setValueAtTime(type === 'in' ? 0 : maxVolume, currentTime);
                 gainNode.gain.linearRampToValueAtTime(type === 'in' ? maxVolume : 0, currentTime + duration / 1000);
+            }
+
+            async function reverbAudio(audioElement, volume) {
+                if (audioCtx.state === 'suspended') {
+                    await audioCtx.resume();
+                }
+
+                if (!audioElement.reverbSetup) {
+                    // Load the impulse response
+                    const response = await fetch('../assets/audio/emt_140_bright_4.wav');
+                    const arrayBuffer = await response.arrayBuffer();
+                    const impulseBuffer = await audioCtx.decodeAudioData(arrayBuffer);
+
+                    // Create audio nodes
+                    const source = audioCtx.createMediaElementSource(audioElement);
+                    const convolver = audioCtx.createConvolver();
+                    const dryGain = audioCtx.createGain();
+                    const wetGain = audioCtx.createGain();
+                    const masterGain = audioCtx.createGain(); // New volume control node
+
+                    // Set up impulse response and gains
+                    convolver.buffer = impulseBuffer;
+                    dryGain.gain.value = 0.5;
+                    wetGain.gain.value = 0.5;
+                    masterGain.gain.value = volume; // Apply user volume
+
+                    // Connect audio graph: (dry + wet) → master → destination
+                    source.connect(dryGain).connect(masterGain);
+                    source.connect(convolver).connect(wetGain).connect(masterGain);
+                    masterGain.connect(audioCtx.destination);
+
+                    // Store nodes for future use
+                    audioElement.reverbSetup = {
+                        convolver,
+                        dryGain,
+                        wetGain,
+                        masterGain
+                    };
+                } else {
+                    // If already set up, just update volume
+                    audioElement.reverbSetup.masterGain.gain.setValueAtTime(voiceVolume, audioCtx.currentTime);
+                }
+            }
+
+            function playReverbTTSAudio(ttsAudioSource, changeBackground, fromClassPrefix, toClassPrefix) {
+                var speechAudio = new Audio(ttsAudioSource);
+                speechAudio.volume = voiceVolume;
+                speechAudio.addEventListener("ended", function() {
+                    if (hasBackgroundMusic) {
+                        setTimeout(() => {
+                            speechTextContainer.classList.add('fade'); // Fade OUT
+                            fadeAudio(backgroundMusicAudio, 'out', backgroundMusicFadeOutTime, backgroundMusicVolume);
+                            setTimeout(() => {
+                                backgroundMusicAudio.pause();
+                                hasBackgroundMusic = false;
+                                if (changeBackground && fromClassPrefix && toClassPrefix) { changeSpeechTextContainerBackround(fromClassPrefix, toClassPrefix); }
+                                endProcessing();
+                            }, backgroundMusicFadeOutTime);
+                        }, 1000);
+                    } else {
+                        speechTextContainer.classList.add('fade'); // Fade OUT
+                        setTimeout(function() {
+                            if (changeBackground && fromClassPrefix && toClassPrefix) { changeSpeechTextContainerBackround(fromClassPrefix, toClassPrefix); }
+                            endProcessing();
+                        }, 1000);
+                    }
+                });
+                var speechPlayPromise = reverbAudio(speechAudio, voiceVolume);
+                if (speechPlayPromise !== undefined) {
+                    speechPlayPromise.then(_ => {
+                        // Autoplay started!
+                    }).catch(error => {
+                        // Autoplay was prevented.
+                        console.error(error);
+                        speechTextContainer.classList.add('fade'); // Fade OUT
+                        setTimeout(function() {
+                            if (changeBackground && fromClassPrefix && toClassPrefix) { changeSpeechTextContainerBackround(fromClassPrefix, toClassPrefix); }
+                            endProcessing();
+                        }, 1000);
+                    });
+                }
             }
         </script>
 
